# ddc

./: .gitignore  Cargo.toml  LICENCE.txt  README.md
.github/workflows/: ddc.yml  release.yml
assets/: example_config.toml
src/: analyze.rs  browse.rs  cli.rs  config.rs  discovery.rs  display.rs  display_tools.rs  file_info.rs  files_db.rs  generate_config.rs  loader.rs  logging.rs  main.rs  progress_report.rs  types.rs  vcs_postprocess.rs
src/browse_tui/: app.rs  component.rs  helpers.rs  message.rs  mod.rs  model.rs
src/browse_tui/components/: browser.rs  filter_bar.rs  footer.rs  header.rs  help_modal.rs  info_modal.rs  mod.rs  projects_tab.rs  sort_modal.rs  tooling_tab.rs  vcs_tab.rs
src/browse_tui/widgets/: mod.rs  pop_up.rs
src/discovery/: default_definitions.rs  detectors.rs  discovery_definitions.rs  discovery_manager.rs  mod.rs  progress.rs  results.rs  types.rs
