[package]
name = "ddc"
version = "0.1.0"
edition = "2024"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
home = "0.5.11"
humansize = "2.1.3"
jwalk = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
tabled = "0.18.0"
thiserror = "2.0.11"
toml = "0.8.19"
