[package]
name = "ddc"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive", "env", "string", "wrap_help"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
home = "0.5.11"
humansize = "2.1.3"
jwalk = "0.8.1"
owo-colors = "4.2.0"
serde = { version = "1.0.217", features = ["derive"] }
tabled = "0.18.0"
thiserror = "2.0.11"
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "registry"] }
rayon = "1.10.0"
dialoguer = { version = "0.12.0", default-features = false }
indicatif = "0.18.3"
ratatui = "0.30.0"

[dev-dependencies]
tempfile = "3.20.0"
